# lord_arkanoid

./: CMakeLists.txt  CMakeSettings.json  LICENSE
include/app/: IModule.h
include/audio/: MusicService.h  SoundService.h
include/core/: Application.h  Resources.h  State.h  StateMachine.h
include/game/: Ball.h  Block.h  BlockGrid.h  Collidable.h  Collision.h  Game.h  GameObject.h  GameState.h  ICollidable.h  Paddle.h  World.h
include/gfx/: ColorEffect.h  Starfield.h
include/input/: InputSystem.h
include/states/: BootState.h  GameOverState.h  MenuState.h  PauseState.h  PlayState.h  WinState.h
include/utils/: DebugOverlay.h  FPSCounter.h  Profiler.h
include/vfx/: CameraShake.h
src/: main.cpp
src/audio/: MusicService.cpp
src/core/: Application.cpp  Resources.cpp  StateMachine.cpp
src/game/: Ball.cpp  BlockGrid.cpp  Collision.cpp  Game.cpp  Paddle.cpp  World.cpp
src/input/: InputSystem.cpp
src/states/: BootState.cpp  GameOverState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  WinState.cpp
src/utils/: DebugOverlay.cpp  Profiler.cpp
src/vfx/: CameraShake.cpp
